# sequintools

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  README.md  build.rs  deny.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-push-docker-image.yml  build-binaries.yml  build-docker.yml  cargo-deny-check.yml  commit-message-check.yml  lint-dockerfiles.yml  release-please.yml  test-and-lint-check.yaml  test-and-lint-check.yml  test-and-lint-without-devcontainer.yml
docs/: calibrate.md  release.md  setup.md
example/: build_example_data.sh  example.bam.bai
example/resources/: sequin_decoy.chrQ_mirror.fa  sequin_regions.chrQ_mirror.bed  sequin_regions.hg38.bed  sequin_sequences-mirror.fa  sequin_sequences-natural.fa
src/: bam.rs  bedcov.rs  calibrate.rs  calibration.rs  coverage.rs  errors.rs  lib.rs  main.rs  region.rs
testdata/: bedcov_max_depth.bam  bedcov_max_depth.bam.bai  bedcov_max_depth.bed  calibrated.bam  calibrated.bam.bai  calibrated.bed  calibrated.cram  calibrated.cram.crai  cram_regions.bed  genome_with_sequins.fasta  genome_with_sequins.fasta.fai  reference.fasta  reference.fasta.fai  sim_R.bam  sim_R.bam.bai  test.bed  uncalibrated.bam  uncalibrated.bam.bai  uncalibrated.cram  uncalibrated.cram.crai
testdata/resources/: sequin_decoy.chrQ_mirror.fasta  sequin_decoy.chrQ_mirror.fasta.fai  sequin_regions.chrQ_mirror.bed  sequin_regions.hg38.bed  sequin_sequences-mirror.fasta  sequin_variants.chrQ_mirror.vcf.gz.tbi  sequin_variants.hg38.vcf.gz.tbi
tests/: cli_integration.rs
