[package]
name = "sequintools"
version = "0.8.5"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A suite of tools for manipulating and reporting on NGS data that has sequins added to the sample."
readme = "README.md"
repository = "https://github.com/sequinsbio/sequintools"
exclude = ["example"]

[[bin]]
name = "sequintools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
rand = "0.9.2"
rand_pcg = "0.9.0"
rust-htslib = "0.50.0"
anyhow = "1.0.99"
csv = "1.3.1"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3.21.0"
