[package]
name = "sequintools"
version = "0.11.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A suite of tools for manipulating and reporting on NGS data that has sequins added to the sample."
readme = "README.md"
repository = "https://github.com/sequinsbio/sequintools"
exclude = ["example"]

[[bin]]
name = "sequintools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9.2"
rand_pcg = "0.9.0"
rust-htslib = "0.51.0"
anyhow = "1.0.100"
csv = "1.4.0"
thiserror = "2.0.17"
rayon = "1.11.0"

[dev-dependencies]
md5 = "0.8.0"
tempfile = "3.24.0"

[features]
test-util = []
